Updated padding and margins to the main, start, & quiz divs.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,11 @@ ol {
     margin-bottom: 25px;
     background-color: #ffffff;
     border: 2px solid #dddddd;
+    padding-top: 25px;
+}
+#start,
+#quiz {
+    margin-top: 50px;
 }
 #timer{
     position: relative;
