--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,8 @@ h1 {
     text-shadow: 1px 1px 2px #000000;
 }
 
-h3 {
+#score {
     font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 14px;
 }
 ul {
     align-items: center;
